--- a/VObject.csproj
+++ b/VObject.csproj
@@ -18,7 +18,7 @@ Provides additional information on an object, more functionalities, and implicit
     <PackageTags>object;vobject;obj;vadvance;data;information;cs;c#;processing;validation</PackageTags>
     <PackageReleaseNotes>Initial release</PackageReleaseNotes>
     <PackAsTool>True</PackAsTool>
-    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+    <PackageLicenseExpression>0BSD</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <IncludeSymbols>True</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
